<resources>
    <string name="app_name">LFApp</string>
    <string name="hello_world">Hello World</string>
    <string name="action_settings">Settings</string>
    <string name="type">Type</string>
    <string name="rule_left_side">u</string>
    <string name="rule_right_side">v</string>
    <string name="regular_grammar">Regular grammar</string>
    <string name="rg_u">u ∈ V</string>
    <string name="rg_v">v ∈ λ | Σ | ΣV</string>
    <string name="context_free_grammar">Context-Free Grammar</string>
    <string name="cfg_u">u ∈ V</string>
    <string name="cfg_v">v ∈ (V ∪ Σ)∗</string>
    <string name="context_sensitive_grammar">Context-Sensitive Grammar</string>
    <string name="csg_u">u ∈ (V ∪ Σ)+</string>
    <string name="csg_v">v ∈ (V ∪ Σ)+</string>
    <string name="csg_condition">|u| ≤ |v|</string>
    <string name="unrestricted_grammar">Unrestricted Grammar</string>
    <string name="ug_u">u ∈ (V ∪ Σ)+</string>
    <string name="ug_v">v ∈ (V ∪ Σ)*</string>
    <string name="logo_ufla">Logo UFLA</string>
    <string name="team">
        Carlos Pereira\n
        carloshpereira27 (at) gmail.com\n\n
        Juventino Neto\n
        jneto (at) computacao.ufla.br\n\n
        Ricardo Terra\n
        terra (at) dcc.ufla.br
    </string>
    <string name="team_html">
        <![CDATA[
        <font size="18"><b>Carlos Pereira</b></font><br />
        <font size="15">carloshpereira27 (at) gmail.com</font><br /><br />
        <b><font size="18">Juventino Neto</font></b><br />
        <font size="15">jneto (at) computacao.ufla.br</font><br /><br />
        <b><font size="18">Ricardo Terra</font></b><br />
        <font size="15">terra (at) dcc.ufla.br</font>
         ]]>
    </string>
    <string name="lfapp_icon">LFApp Icon</string>
    <string name="close">Close</string>
    <string name="grammar_td">Grammar:</string>
    <string name="word_description_grammar">
        Word (if you want to verify acceptances and derivations):
    </string>
    <string name="lambda">λ</string>
    <string name="arrow"><![CDATA[→]]></string>
    <string name="pipe">|</string>
    <string name="ok">OK</string>
    <string name="about_button">About</string>
    <string name="removing_left_recursive_algol_p1">
        <![CDATA[
        (2) Remove recursions in order:<br/>
        <b>PSEUDOCODE</b><br/>
        <b>for</b> i = 1 to n <b>do</b><br/>
            &nbsp;&nbsp;&nbsp;
            <b>if</b> A<sub><small>i</sub></small> has direct left recursion <b>then</b><br/>
                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                eliminate recursion in A<sub><small>i</sub></small><br/>
            &nbsp;&nbsp;&nbsp;
            <b>end</b><br/>
            &nbsp;&nbsp;&nbsp;
            <b>for</b> j = i+1 to n <b>do</b><br/>
                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                <b>for</b> each production in A<sub><small>j</sub></small> <b>do</b><br/>
                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                    <b>if</b> A<sub><small>j</sub></small> → A<sub><small>i</sub></small>γ <b>then</b><br/>
                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                        replace A<sub><small>j</sub></small> → A<sub><small>i</sub></small>γ<br/>
                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                        with A<sub><small>j</sub></small> → δ<sub><small>1</sub></small>γ | δ<sub><small>2</sub></small>γ | … | δ<sub><small>k</sub></small>γ<br/>
                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                        where A<sub><small>i</sub></small> → δ<sub><small>1</sub></small> | δ<sub><small>2</sub></small> | … | δ<sub><small>k</sub></small><br/>
                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                        are all current productions of A<sub><small>i</sub></small><br/>
                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                    <b>end</b><br/>
                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                <b>end</b><br/>
            &nbsp;&nbsp;&nbsp;
            <b>end</b><br/>
        <b>end</b><br/>
        ]]>
    </string>
    <string name="removing_left_recursive_algol_p2">
        <![CDATA[
        (1) Remove rules of type A<sub><small>j</sub></small> → A<sub><small>i</sub></small>γ, in the reverse order of that used to remove left recursion:<br/>
        <b>PSEUDOCODE</b><br/>&
        <b>for</b> i = n to 1 <b>do</b><br/>
            &nbsp;&nbsp;&nbsp;
            <b>for</b> j = i-1 to 1 <b>do</b><br/>
                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                <b>for</b> each production in A<sub><small>j</sub></small> <b>do</b><br/>
                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                    <b>if</b> A<sub><small>j</sub></small> → A<sub><small>i</sub></small>γ <b>then</b><br/>
                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                        replace A<sub><small>j</sub></small> → A<sub><small>i</sub></small>γ<br/>
                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                        with A<sub><small>j</sub></small> → δ<sub><small>1</sub></small>γ | δ<sub><small>2</sub></small>γ | … | δ<sub><small>k</sub></small>γ<br/>
                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                        where A<sub><small>i</sub></small> → δ<sub><small>1</sub></small> | δ<sub><small>2</sub></small> | … | δ<sub><small>k</sub></small><br/>
                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                        are all current productions of A<sub><small>i</sub></small><br/>
                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                    <b>end</b><br/>
                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                <b>end</b><br/>
            &nbsp;&nbsp;&nbsp;
            <b>end</b><br/>
        <b>end</b><br/>
        ]]>
    </string>
    <string name="removing_left_recursive_algol_p3">
        <![CDATA[
        (2) Remove rules of type R<sub><small>i</sub></small> → Vγ in the variables created by the left recursion removal algorithm, in order:<br/>
        <b>PSEUDOCODE</b><br/>
        <b>for</b> i = 1 to n <b>do</b><br/>
            &nbsp;&nbsp;&nbsp;
            <b>for</b> each production in Z<sub><small>i</sub></small> <b>do</b><br/>
                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                <b>if</b> Z<sub><small>i</sub></small> → Vγ <b>then</b><br/>
                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                    replace Z<sub><small>i</sub></small> → Vγ<br/>
                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                    with Z<sub><small>i</sub></small> → δ<sub><small>1</sub></small>γ | δ<sub><small>2</sub></small>γ | … | δ<sub><small>k</sub></small>γ<br/>
                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                    where V → δ<sub><small>1</sub></small> | δ<sub><small>2</sub></small> | … | δ<sub><small>k</sub></small><br/>
                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                <b>end</b><br/>
            &nbsp;&nbsp;&nbsp;
            <b>end</b><br/>
        <b>end</b><br/>
        ]]>
    </string>
    <string name="grammar_identification">Grammar Identification</string>
    <string name="leftmost_derivation">Leftmost Derivation</string>
    <string name="elimination_recursion_start_symbol">Elimination of the Recursion of the Start Symbol</string>
    <string name="elimination_empty_productions">Elimination of Lambda Rules</string>
    <string name="elimination_chain_rules">Elimination of Chain Rules</string>
    <string name="term">Remove Variables That Do Not Generate Terminal Strings</string>
    <string name="reach">Remove Unreachable Symbols</string>
    <string name="chomsky_normal_form">Chomsky Normal Form</string>
    <string name="removal_direct_left_recursion">Removal of Direct Left Recursion</string>
    <string name="removal_left_recursion">Removal of Direct and Indirect Left Recursion</string>
    <string name="greibach_normal_form">Greibach Normal Form</string>
    <string name="cyk">CYK</string>
    <string name="algorithm">Algorithm:</string>
    <string name="properties_chomsky_normal_form">Chomsky Normal Form</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="history">History</string>
    <string name="ambiguity_check">
        Ambiguity check
    </string>
    <string name="algolPDAToCFGStage3">
        <![CDATA[
        <b>#2</b> If [q<sub><small>j</small></sub>, B] ∈ <i>δ\'</i>(q<sub><small>i</small></sub>, x, A), then\t(A e B ∈ Γ U {λ})\n
            \t<b>•</b> <q<sub><small>i</small></sub>, A, <cb:#786DBE>q<sub><small>k</small></sub></cb>> → x<q<sub><small>j</small></sub>, B, <cb:#786DBE>q<sub><small>k</small></sub></cb>>, para todo <cb:#786DBE>q<sub><small>k</small></sub></cb> ∈ Q\n
        <b>#3</b> If [q<sub><small>j</small></sub>, BA] ∈ <i>δ\'</i>(q<sub><small>i</small></sub>, x, A), then\t(A e B ∈ Γ)\n
            \t<b>•</b> <q<sub><small>i</small></sub>, A, <cb:#786DBE>q<sub><small>k</small></sub></cb>> → x<q<sub><small>j</small></sub>, B, q<sub><small>n</small></sub>><<cb:#8FD45A>q<sub><small>n</small></sub></cb>, A, <cb:#786DBE>q<sub><small>k</small></sub></cb>>, <cb:#786DBE>q<sub><small>k</small></sub></cb>, <cb:#8FD45A>q<sub><small>n</small></sub></cb> ∈ Q\n
        ]]>
    </string>
    <string name="grammar">Grammar</string>
    <string name="convert_cfg_into_pda">Convert CFG into pushdown automaton</string>
    <string name="pda_extend">Pushdown automaton extend:</string>
    <string name="new_rules">New rules:</string>
    <string name="generate_rules_automaton_transitions">Generate rules with automaton transitions</string>
    <string name="current_grammar">Current grammar:</string>
    <string name="transition_tm">Transition - Turing Machine</string>
    <string name="symbol_read">Symbol (read):</string>
    <string name="symbol_write">Symbol (write):</string>
    <string name="direction">Direction:</string>
    <string name="direction_right">R</string>
    <string name="direction_left">L</string>
    <string name="direction_static">S</string>
    <string name="state">State:</string>
    <string name="initial_state">Start</string>
    <string name="final_state">Final</string>
    <string name="move_state">Move</string>
    <string name="compl_automaton">Complete Automaton</string>
    <string name="processar_palavra">word_process</string>
    <string name="convert_fsand_fsad_step_by_step">Convert NDFA into DFA step by step</string>
    <string name="min_fsa_step_by_step">Minimize DFA step by step</string>
    <string name="min_fsand_regular_expression">Create NDFA with Regular Expression</string>
    <string name="pda_to_grammar_step_by_step">Convert automaton into grammar step by step</string>
    <string name="word_process_pda">Word processing</string>
    <string name="word_process_turing_machine">Word Process as Turing Machine</string>
    <string name="word_process_linear_bounded_automaton">Word Process as Linear bounded automaton</string>
</resources>