<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <include layout="@layout/header_grammar"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.67">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/idGrammarButton"
                android:text="@string/grammar_identification"
                style="@style/ButtonSingleLine" />

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/derivationMostLeftButton"
                android:text="@string/leftmost_derivation"
                style="@style/ButtonSingleLine" />

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/ambiguityVerification"
                android:text="@string/ambiguity_check"
                style="@style/ButtonSingleLine" />

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/cfgto_pda"
                android:text="@string/convert_cfg_into_pda"
                style="@style/ButtonSingleLine" />

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/RemoveRecursiveInitialSymbolButton"
                android:text="@string/elimination_recursion_start_symbol"
                style="@style/ButtonSingleLine" />

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/RemoveEmptyProductionsButton"
                android:text="@string/elimination_empty_productions"
                style="@style/ButtonSingleLine" />

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/RemoveChainRulesButton"
                android:text="@string/elimination_chain_rules"
                style="@style/ButtonSingleLine" />

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/TermButton"
                android:text="@string/term"
                style="@style/ButtonSingleLine" />

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/ReachButton"
                android:text="@string/reach"
                style="@style/ButtonSingleLine" />

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/FNCButton"
                android:text="@string/chomsky_normal_form"
                style="@style/ButtonSingleLine" />

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/RemoveRecursionDirectLeftButton"
                android:text="@string/removal_direct_left_recursion"
                style="@style/ButtonSingleLine" />

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/RemoveRecursionLeftButton"
                android:text="@string/removal_left_recursion"
                style="@style/ButtonSingleLine" />

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/FNGButton"
                android:text="@string/greibach_normal_form"
                style="@style/ButtonSingleLine" />

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/CykButton"
                android:text="@string/cyk"
                style="@style/ButtonSingleLine" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>