<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <include layout="@layout/header_grammar"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.67">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/removeRecursiveInitialSymbol"
                android:text="@string/elimination_recursion_start_symbol"
                style="@style/ButtonSingleLine" />

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/removeEmptyProduction"
                android:text="@string/elimination_empty_productions"
                style="@style/ButtonSingleLine" />

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/removeChainRule"
                android:text="@string/elimination_chain_rules"
                style="@style/ButtonSingleLine" />

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/term"
                android:text="@string/term"
                style="@style/ButtonSingleLine" />

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/reach"
                android:text="@string/reach"
                style="@style/ButtonSingleLine" />

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/chomskyNormalForm"
                android:text="@string/properties_chomsky_normal_form"
                style="@style/ButtonSingleLine" />

            <com.ufla.lfapp.utils.AutoResizeTextView
                android:id="@+id/removeRecursionLeft"
                android:text="@string/removal_left_recursion"
                style="@style/ButtonSingleLine" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>