<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/clear"
        android:title="Clear"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/verifyEntryTM"
        android:title="@string/word_process_turing_machine"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/verifyEntryALL"
        android:title="@string/word_process_linear_bounded_automaton"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/history"
        android:title="@string/history"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView"/>

</menu>