<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" />

        <EditText
            android:id="@+id/stateName"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/chkInitial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_state" />

        <CheckBox
            android:id="@+id/chkFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_state" />

        <CheckBox
            android:id="@+id/chkMove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_state" />

    </LinearLayout>

</LinearLayout>
