<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:textSize="16sp"
            android:text="@string/pda_extend"
            android:id="@+id/inputPdaExtTitle"
            android:textStyle="bold"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pdaExt" />

        <com.ufla.lfapp.utils.AutoResizeTextView
            android:text="@string/generate_rules_automaton_transitions"
            style="@style/TitleSingleLine"
            android:id="@+id/descrTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:textSize="16sp"
            android:text="@string/current_grammar"
            android:id="@+id/grammarActualTitle"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grammarActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/Black"
            android:textSize="16sp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/algolTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/algorithm"
            android:textColor="@color/Black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:textSize="16sp"
            android:text="@string/algolPDAToCFGStage3"
            android:id="@+id/algol"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/newTransitionsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_rules"
            android:textColor="@color/Black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/newTransitions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:textSize="16sp"
            android:text="@string/grammar"
            android:id="@+id/grammarTitle"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grammar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/Black"
            android:textSize="16sp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttons">

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="49dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:contentDescription="@string/back"
                android:onClick="back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintVertical_bias="1.0"/>

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_arrow_forward_black_24dp"
                android:contentDescription="@string/next"
                android:id="@+id/next"
                android:onClick="next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintVertical_bias="1.0"/>

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</ScrollView>
